@@ -15,6 +15,7 @@ import org.bukkit.event.player.PlayerQuitEvent;
 import java.util.ArrayList;
 import java.util.Iterator;
 import java.util.List;
+import java.util.Set;
 
 import static org.bukkit.event.EventPriority.*;
 
@@ -24,7 +25,8 @@ public class CombatLogManager implements Listener {
 
     public CombatLogManager(pFFA plugin) {
         this.plugin = plugin;
-        ConfigurationSection combatlog = plugin.getConfig().getConfigurationSection("combatlog");
+        this.ffaWorlds = Set.copyOf(plugin.getConfig().getStringList("ffa_worlds"));
+        final ConfigurationSection combatlog = plugin.getConfig().getConfigurationSection("combatlog");
 
         if (!combatlog.getBoolean("enabled")) {
             plugin.getLogger().warning("Combatlog is disabled in the config, not loading Combatlog Manager.");
@@ -34,8 +36,8 @@ public class CombatLogManager implements Listener {
         plugin.getServer().getPluginManager().registerEvents(this, plugin);
 
         Tasks.runRepeatingSync(2, 10, () -> {
-            for (Iterator<CombatLog> iterator = combatLogs.iterator(); iterator.hasNext(); ) {
-                CombatLog combatLog = iterator.next();
+            for (final Iterator<CombatLog> iterator = combatLogs.iterator(); iterator.hasNext(); ) {
+                final CombatLog combatLog = iterator.next();
 
                 if (combatLog.isExpired()) {
                     iterator.remove();
@@ -43,9 +45,9 @@ public class CombatLogManager implements Listener {
                     continue;
                 }
 
-                int secondsLeft = combatLog.getTimeLeftSeconds() + 1;
+                final int secondsLeft = combatLog.getTimeLeftSeconds() + 1;
                 combatLog.getPlayers().forEach(player -> {
-                    String actionBar = combatlog.getString("display.action_bar");
+                    final String actionBar = combatlog.getString("display.action_bar");
                     if (actionBar != null && !actionBar.isEmpty())
                         player.sendActionBar(CC.a(actionBar));
                     if (combatlog.getBoolean("display.level"))
@@ -57,17 +59,19 @@ public class CombatLogManager implements Listener {
         });
     }
 
+    private final Set<String> ffaWorlds;
+
     @EventHandler(priority = MONITOR)
     public void onPlayerDamage(EntityDamageByEntityEvent event) {
         if (event.isCancelled()) return;
-        if (!plugin.getConfig().getStringList("ffa_worlds").contains(event.getEntity().getWorld().getName())) return;
+        if (!ffaWorlds.contains(event.getEntity().getWorld().getName())) return;
         if (event.getEntity() instanceof Player victim && event.getDamager() instanceof Player attacker)
             startCombat(attacker, victim);
     }
 
     @EventHandler(priority = HIGH)
     public void onPlayerDeath(PlayerDeathEvent event) {
-        if (!plugin.getConfig().getStringList("ffa_worlds").contains(event.getEntity().getWorld().getName())) return;
+        if (!ffaWorlds.contains(event.getEntity().getWorld().getName())) return;
         event.setDroppedExp(0);
         event.getDrops().clear();
         getCombatLogs(event.getEntity()).forEach(this::endCombat);
@@ -75,14 +79,14 @@ public class CombatLogManager implements Listener {
 
     @EventHandler(priority = LOW)
     public void onPlayerQuit(PlayerQuitEvent event) {
-        if (!plugin.getConfig().getStringList("ffa_worlds").contains(event.getPlayer().getWorld().getName())) return;
-        Player player = event.getPlayer();
-        CombatLog combatLog = getLastCombatLog(player);
+        if (!ffaWorlds.contains(event.getPlayer().getWorld().getName())) return;
+        final Player player = event.getPlayer();
+        final CombatLog combatLog = getLastCombatLog(player);
         if (combatLog != null) {
-            Player other = combatLog.getAttacker().equals(player) ? combatLog.getVictim() : combatLog.getAttacker();
+            final Player other = combatLog.getAttacker().equals(player) ? combatLog.getVictim() : combatLog.getAttacker();
             player.setKiller(other);
             player.setHealth(0);
-            String logoutBroadcast = plugin.getConfig().getString("combatlog.logout_broadcast");
+            final String logoutBroadcast = plugin.getConfig().getString("combatlog.logout_broadcast");
             if (logoutBroadcast != null && !logoutBroadcast.isEmpty())
                 plugin.getServer().broadcast(CC.af(logoutBroadcast, player.getName()));
         }
@@ -92,16 +96,16 @@ public class CombatLogManager implements Listener {
     private final List<CombatLog> combatLogs = new ArrayList<>();
 
     private void startCombat(Player attacker, Player victim) {
-        CombatLog combatLog = getCombatLog(attacker, victim);
+        final CombatLog combatLog = getCombatLog(attacker, victim);
         int combatLogDurationInSeconds = plugin.getConfig().getInt("combatlog.duration");
         if (combatLog == null) {
             if (getCombatLogs(attacker).isEmpty()) {
-                String message = plugin.getConfig().getString("combatlog.attacker_message");
+                final String message = plugin.getConfig().getString("combatlog.attacker_message");
                 if (message != null && !message.isEmpty())
                     attacker.sendMessage(CC.af(message, victim.getName()));
             }
             if (getCombatLogs(victim).isEmpty()) {
-                String message = plugin.getConfig().getString("combatlog.victim_message");
+                final String message = plugin.getConfig().getString("combatlog.victim_message");
                 if (message != null && !message.isEmpty())
                     victim.sendMessage(CC.af(message, attacker.getName()));
             }
@@ -112,7 +116,7 @@ public class CombatLogManager implements Listener {
 
     private void endCombat(CombatLog combatLog) {
         combatLogs.remove(combatLog);
-        for (Player player : combatLog.getPlayers()) {
+        for (final Player player : combatLog.getPlayers()) {
             player.sendActionBar(Component.empty());
             player.setLevel(0);
             player.setExp(0);
@@ -125,21 +129,27 @@ public class CombatLogManager implements Listener {
     }
 
     public List<CombatLog> getCombatLogs(Player player) {
-        return combatLogs.stream()
-                .filter(c -> c.getPlayers().contains(player))
-                .toList();
+        final List<CombatLog> list = new ArrayList<>();
+        for (final CombatLog combatLog : combatLogs) {
+            if (combatLog.getPlayers().contains(player)) {
+                list.add(combatLog);
+            }
+        }
+        return list;
     }
 
     public CombatLog getLastCombatLog(Player player) {
-        List<CombatLog> list = getCombatLogs(player);
+        final List<CombatLog> list = getCombatLogs(player);
         if (list.isEmpty()) return null;
-        return list.get(list.size() - 1);
+        return list.getLast();
     }
 
     public CombatLog getCombatLog(Player player1, Player player2) {
-        return combatLogs.stream()
-                .filter(c -> c.getPlayers().contains(player1) && c.getPlayers().contains(player2))
-                .findAny().orElse(null);
+        for (final CombatLog combatLog : combatLogs) {
+            if (combatLog.getPlayers().contains(player1) && combatLog.getPlayers().contains(player2))
+                return combatLog;
+        }
+        return null;
     }
 
 }
